--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@reduxjs/toolkit": "^2.2.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "swiper": "^11.0.7"
   },
