--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "sass": "^1.74.1",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
